Search-box overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,34 @@ body {
   font-family: roboto;
 }
 
-h1, h3, h4, h6 {
+h1,
+h3,
+h4,
+h6 {
   margin:0;
   padding:0;
   overflow: hidden;
 }
 
-h2, h5 {
+h2,
+h5 {
   margin:0;
   padding:0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow:ellipsis;
 }
- a, p, div, span {
+
+a,
+p,
+div,
+span {
   margin:0;
   padding:0;
+}
+
+.hide {
+  display: none;
 }/*-end-general*/
 
 /*map*/
@@ -50,6 +62,7 @@ h2, h5 {
   position: absolute;
   top:20px;
   left:20px;
+  width: 40vw;
   display:flex;
 }
 
@@ -65,10 +78,6 @@ h2, h5 {
   left:10px;
 }
 
-.hide {
-  display: none;
-}
-
 .categories, .search-box {
   padding: 5px;
   background-color: #ddd;
@@ -79,7 +88,7 @@ h2, h5 {
 }
 
 .search-box {
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 .categories {
@@ -87,7 +96,7 @@ h2, h5 {
 }
 
 .categories input[type='text'] {
-  width: 50%;
+  width: 45%;
 }
 
 .search-image {
@@ -110,14 +119,14 @@ h2, h5 {
 
 /*list*/
 .list-wrapper {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #fff;
-    height: 100px;
-    overflow: hidden;
-    overflow-x:scroll;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  height: 100px;
+  overflow: hidden;
+  overflow-x:scroll;
 }
 
 .list {
@@ -270,13 +279,13 @@ h2, h5 {
     height: calc(100% - 85px);
   }
 
-.icon-list {
-  width: 60px;
-}
+  .icon-list {
+    width: 60px;
+  }
 
-.icon-list img{
-  width: 52px;
-  height: 52px;
-}
+  .icon-list img{
+    width: 52px;
+    height: 52px;
+  }
 
 }
